--- a/skript.tex
+++ b/skript.tex
@@ -727,9 +727,9 @@ Was ist mit nicht-bipartiten Graphen? Problem: Fehlen von Lemma \textit{(\ref{5.
 ladida
 \subsection{Von Basen zu diskreten Strukturen: Matroide}\sslbl
 \subsubsection{Definition}\ssslbl
-$E$ endliche Menge, $\mathcal I$ nichtleere Teilmenge von $2^E$. Das Paar $(E,\mathcal I)$ heißt \textit{Unabhängigkeitssystem}\index{Unabhängigkeitssystem}, wenn $\mathcal I$ abgeschlossen unter Inklusion ist, dh. ($I\in\mathcal I\wedge J\subset I$ $\Rightarrow$ $J\in\mathcal I$). $E$ \textit{Grundmenge}\index{Grundmenge}, Elemente von $\mathcal I$ \textit{unabhängige Mengen}\index{Mengen!unabhängige}, Elemente von $2^E\setminus\mathcal I$ \textit{abhängig}\index{Mengen!abhängige}. Gilt ferner ($I,J\in\mathcal I\wedge\vert I\vert+1=\vert J\vert$ $\Rightarrow$ $\exists(e\in J\setminus I):I\cup\{e\}\in\mathcal I$), so heißt $(E,\mathcal I)$ \textit{Matroid}\index{Matroid}\\\hfill\textbf{07.11.2008}
+$E$ endliche Menge, $\mathcal I$ nichtleere Teilmenge von $2^E$. Das Paar $(E,\mathcal I)$ heißt \textit{Unabhängigkeitssystem}\index{Unabhängigkeitssystem}, wenn $\mathcal I$ abgeschlossen unter Inklusion ist, dh. ($I\in\mathcal I\wedge J\subset I$ $\Rightarrow$ $J\in\mathcal I$). $E$ \textit{Grundmenge}\index{Grundmenge}, Elemente von $\mathcal I$ \textit{unabhängige Mengen}\index{Mengen!unabhängige}, Elemente von $2^E\setminus\mathcal I$ \textit{abhängig}\index{Mengen!abhängige}. Gilt ferner ($I,J\in\mathcal I\wedge\vert I\vert+1=\vert J\vert$ $\Rightarrow$ $\exists(e\in J\setminus I):I\cup\{e\}\in\mathcal I$), so heißt $(E,\mathcal I)$ \textit{Matroid}\index{Matroid}.
 \subsubsection{Bemerkung}\ssslbl
-$(E,\mathcal I)$ Unabhängigkeitssystem. Dann gilt
+$(E,\mathcal I)$ Unabhängigkeitssystem. Dann gilt\hfill\textbf{07.11.2008}
 \begin{enumerate}[(a)]
 \item $\emptyset\in\mathcal I$
 \item $(E,\mathcal I)$ Matroid, genau dann wenn
@@ -746,7 +746,7 @@ $E_1,\dots,E_4$ endliche Mengen, $\mathcal I_i\subset2^{E_i}$ ($i\in[4]$) defini
 \item $s\in\mathbb N$, $\Pi=(A_1,\dots,A_s)$ Partition von $E_4$, $\beta_1,\dots,\beta_s\in\mathbb N_0$
 \[\mathcal I_4:=\{I\subset E_4\::\:\vert I\cap A_i\vert\leq\beta_i\:(i=1,\dots,s)\}\]
 \end{enumerate}
-Dann sind $(E_i,\mathcal I_i)$ Matroide
+Dann sind $(E_i,\mathcal I_i)$ Matroide.
 \subsubsection*{Beweis}
 \begin{itemize}
 \item Abgeschlossen bez. Inklusion
@@ -765,7 +765,7 @@ $(E,\mathcal I)$ Unabhängigkeitssystem, $A\subset E$, $\mathcal I_A:=\{I\in\math
 \subsubsection*{Beweis}
 $\surd$
 \subsubsection{Bezeichnung}\ssslbl
-$(A,\mathcal I_A)$ durch $A$ \textit{induziertes Unabhängigkeitssystem / Matroid}\index{Matroid!induziertes}\index{Unabhängigkeitssystem!induziertes}
+$(A,\mathcal I_A)$ durch $A$ \textit{induziertes Unabhängigkeitssystem / Matroid}\index{Matroid!induziertes}\index{Unabhängigkeitssystem!induziertes}.
 \subsubsection{Bezeichnung}\ssslbl
 $X_1,X_2$ Mengen, $\theta:X_1\rightarrow X_2$. Dann $\Theta:2^{X_1}\rightarrow2^{X_2}$ definiert durch $\Theta(I):=\{\theta(x)\::\:x\in I\}$ \textit{natürliche Erweiterung}\index{Erweiterung!natürliche} von $\theta$.
 \subsubsection{Bemerkung}\ssslbl
@@ -777,15 +777,119 @@ $G=(V,E)$ Graph, $V=\{v_1,\dots,v_n\}$, $E=\{e_1,\dots,e_m\}$, $m\geq1$, $Z\subs
 \subsubsection*{Beweis}
 direkt aus \textit{(\ref{5.2.8})}
 \subsubsection{Beispiel}
-ladida
+$G=(V,E)$
+\begin{center}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertex] (v\name) at (72*\j:2cm) {$v_\name$};
+\node[vertex] (v3) at (0,0) {$v_3$};
+
+\path[edge] (v1) to (v2) node[midway,above] {$e_1$};
+\path[edge] (v1) to (v3) node[midway,above right] {$e_2$};
+\path[edge] (v1) to (v4) node[midway,left] {$e_3$};
+\path[edge] (v2) to (v3) node[midway,below right] {$e_4$};
+\path[edge] (v3) to (v4) node[midway,below right] {$e_5$};
+\path[edge] (v2) to (v5) node[midway,right] {$e_6$};
+\path[edge] (v4) to (v6) node[midway,below] {$e_7$};
+\path[edge] (v5) to (v6) node[midway,below right] {$e_8$};
+\end{tikzpicture}
+\end{center}
+\[S_G=\left(\begin{array}{cccccccc}
+1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 \\ 
+\textcolor{orange}1 & 0 & 0 & 1 & 0 & 1 & 0 & 0 \\ 
+0 & \textcolor{orange}1 & 0 & 1 & 1 & 0 & 0 & 0 \\ 
+0 & 0 & \textcolor{orange}1 & 0 & 1 & 0 & 1 & 0 \\ 
+0 & 0 & 0 & 0 & 0 & \textcolor{orange}1 & 0 & 1 \\ 
+0 & 0 & 0 & 0 & 0 & 0 & \textcolor{orange}1 & 1
+\end{array} \right)\qquad rang(S_G)=5\]
+abhängig:
+\begin{center}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertexpt] (v\name) at (72*\j:1cm) {};
+\node[vertexpt] (v3) at (0,0) {};
+
+\path[edge] (v1) to (v2);
+\path[edge] (v1) to (v3);
+\path[edge] (v2) to (v3);
+\end{tikzpicture}
+\hspace{1cm}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertexpt] (v\name) at (72*\j:1cm) {};
+\node[vertexpt] (v3) at (0,0) {};
+
+\path[edge] (v1) to (v2);
+\path[edge] (v1) to (v4);
+\path[edge] (v2) to (v3);
+\path[edge] (v3) to (v4);
+\end{tikzpicture}
+\hspace{1cm}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertexpt] (v\name) at (72*\j:1cm) {};
+\node[vertexpt] (v3) at (0,0) {};
+
+\path[edge] (v1) to (v2);
+\path[edge] (v1) to (v4);
+\path[edge] (v2) to (v5);
+\path[edge] (v4) to (v6);
+\path[edge] (v5) to (v6);
+\end{tikzpicture}
+\end{center}
+unabhängig:
+\begin{center}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertexpt] (v\name) at (72*\j:1cm) {};
+\node[vertexpt] (v3) at (0,0) {};
+
+\path[edge] (v1) to (v4);
+\path[edge] (v2) to (v3);
+\path[edge] (v3) to (v4);
+\path[edge] (v4) to (v6);
+\path[edge] (v5) to (v6);
+\end{tikzpicture}
+\hspace{1cm}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertexpt] (v\name) at (72*\j:1cm) {};
+\node[vertexpt] (v3) at (0,0) {};
+
+\path[edge] (v1) to (v3);
+\path[edge] (v1) to (v4);
+\path[edge] (v2) to (v3);
+\path[edge] (v4) to (v6);
+\path[edge] (v5) to (v6);
+\end{tikzpicture}
+\hspace{1cm}
+\begin{tikzpicture}
+\tikzstyle{every loop}=[]
+\foreach \name/\j in {{5/0},{2/1},{1/2},{4/3},{6/4}}
+  \node[vertexpt] (v\name) at (72*\j:1cm) {};
+\node[vertexpt] (v3) at (0,0) {};
+
+\path[edge] (v1) to (v3);
+\path[edge] (v1) to (v4);
+\path[edge] (v2) to (v5);
+\path[edge] (v5) to (v6);
+\end{tikzpicture}
+\end{center}
 \subsubsection{Lemma}\ssslbl
 $G=(V,E)$, $(E,\mathcal F)$ zugehöriges vektorielles Matroid über $\mathbb Z_2$, $T\subset E$. $T$ ist genau dann unabhängig, wenn $(V,T)$ kreisfrei ist.
 \subsubsection*{Beweis}
 Übung
 \subsubsection{Bezeichnung}\ssslbl
-$(E,\mathcal F)$ wie oben: \textit{graphisches Matroid}\index{Matroid!graphisches}
+$(E,\mathcal F)$ wie oben: \textit{graphisches Matroid}\index{Matroid!graphisches}.
 \subsubsection{Definition}\ssslbl
-$U=(E,\mathcal I)$ Unabhängigkeitssystem. Jede (inklusions-)maximale unabhängige Menge aus $\mathcal I$ heißt \textit{Basis}\index{Basis}. (inklusions-)minimale abhängige Mengen heißen \textit{Kreis}\index{Kreis}.
+$U=(E,\mathcal I)$ Unabhängigkeitssystem. Jede (inklusions-)maximale unabhängige Menge aus $\mathcal I$ heißt \textit{Basis}\index{Basis}.\\
+Jede (inklusions-)minimale abhängige Mengen heißen \textit{Kreis}\index{Kreis}.
 \begin{align*}
 r_+(U)&:=\max\{\vert B\vert\::\:B\text{ Basis}\}\\
 r_-(U)&:=\min\{\vert B\vert\::\:B\text{ Basis}\}
@@ -793,7 +897,9 @@ r_-(U)&:=\min\{\vert B\vert\::\:B\text{ Basis}\}
 $r_+(U)$ \textit{oberer Rang}\index{Rang!oberer}, $r_-(U)$ \textit{unterer Rang}\index{Rang!unterer}\\[1ex]
 $r(U):=r_+(U)=r_-(U)$ \textit{Rang}\index{Rang}.
 \subsubsection{Lemma}\ssslbl
-$U=(E,\mathcal I)$ Unabhängigkeitssystem. $U$ Matroid genau dann wenn für jedes $A\subset E$ und $U_A=(A,\mathcal I_A)$ gilt $r_+(U_A)=r_-(U_A)$ (insbesondere alle Basen haben gleiche Kardinalität)
+$U=(E,\mathcal I)$ Unabhängigkeitssystem. $U$ Matroid genau dann wenn für jedes $A\subset E$ und $U_A=(A,\mathcal I_A)$ gilt
+\[r_+(U_A)=r_-(U_A)\]
+Insbesondere haben alle Basen haben gleiche Kardinalität.
 \subsubsection*{Beweis}
 \begin{itemize}
 \item[$\Rightarrow$] folgt aus Austauschbedingung
@@ -805,15 +911,15 @@ $M=(E,\mathcal I)$ Matroid, $I\in\mathcal I$, $e\in E$, $I\cup\{e\}\not\in\mathc
 Da $I\cup\{e\}$ abhängig, enthält $I\cup\{e\}$ Kreis. Seien $K_1,K_2$ zwei verschiedene Kreise in $I\cup\{e\}$. Da $I\in\mathcal I$ und $(K_1\cup K_2)\setminus\{e\}\subset I$ folgt $e\in K_1\cap K_2$, $(K_1\cup K_2)\setminus\{e\}\in\mathcal I$. Sei $a\in K_1\setminus K_2$. Dann $K_1\setminus\{a\}\in\mathcal I$. Austauschbedingung auf $K_1\setminus\{a\}$, $(K_1\cup K_2)\setminus\{e\}$ anwenden: liefert $J\in\mathcal I$: $K_1\setminus\{a\}\subset J\subset K_1\cup K_2$ und $\vert J\vert=\vert(K_1\cup K_2)\setminus\{e\}\vert$. Sei $\{b\}=(K_1\cup K_2)\setminus J$. Falls $b=a$ ($\in K_1\setminus K_2$) folgt $K_2\subset J$, dh. $K_2\in\mathcal I$ Widerspruch. Also $b\neq a$.\\[1ex]
 Wegen $a\in K_1$ folgt $a\in J$. Ferner $K_1\setminus\{a\}\subset J$, also $K_1\subset J$ Widerspruch zu $K_1\in 2^E\setminus\mathcal I$.
 \subsubsection{Definition}\ssslbl
-\textit{Maximierungsaufgabe}\index{Maximierungsaufgabe} über Unabhängigskeitssystem / Matroid spezifiziert Unabhängigkeitssystem bzw. Matroid $(E,\mathcal I)$, $\Phi:E\rightarrow[0,\infty[$. Sei $\varphi:\mathcal I\rightarrow[0,\infty[$ definiert durch $\varphi(I):=\sum_{e\in I}\Phi(e)$. Gesucht $I^*$ mit $\varphi(I^*)=\max_{I\in\mathcal I}\varphi(I)$.\hfill\textbf{11.11.2008}
-\subsubsection{Prozedur: Greedy-Algorithmus\index{Greedy-Algorithmus}}\ssslbl
+\textit{Maximierungsaufgabe}\index{Maximierungsaufgabe} über Unabhängigskeitssystem / Matroid spezifiziert Unabhängigkeitssystem bzw. Matroid $(E,\mathcal I)$, $\Phi:E\rightarrow[0,\infty[$. Sei $\varphi:\mathcal I\rightarrow[0,\infty[$ definiert durch $\varphi(I):=\sum_{e\in I}\Phi(e)$. Gesucht $I^*$ mit $\varphi(I^*)=\max_{I\in\mathcal I}\varphi(I)$.
+\subsubsection{Prozedur: Greedy-Algorithmus\index{Greedy-Algorithmus}}\ssslbl\hfill\textbf{11.11.2008}
 \begin{lstlisting}
 INPUT Unabhängigkeitssystem $(E,\mathcal I)$, $\Phi:E\rightarrow[0,\infty[$
 OUTPUT $I^g\in\mathcal I$
 BEGIN $A\leftarrow E$, $I^g\leftarrow\emptyset$
-   WHILE $a\neq\emptyset$ DO
+   WHILE $A\neq\emptyset$ DO
       BEGIN
-         Wähle $a\in argmax\Phi(e)_{e\in A}$
+         Wähle $a\in argmax_{e\in A}\Phi(e)$
          $A\leftarrow A\setminus\{a\}$
          IF $I^g\cup\{a\}\in\mathcal I$ THEN
             $I^g\leftarrow I^g\cup\{a\}$
@@ -864,7 +970,7 @@ Sei $\gamma\in[0,\infty[$, $\Phi:E\rightarrow[0,\infty[$ definiert durch
 \[\Phi(e)=\begin{cases}\gamma+1&e=e_1\\\gamma&\text{sonst}\end{cases}\]
 $I^g=\{e_1\}$, $\varphi(I^g)=\gamma+1$, $I^*:=\{e_2,\dots,e_m\}$, $\varphi(I^*)=\gamma(m-1)$. Sei $\gamma>\frac1{m-2}$. Dann $I^*$ optimal. Es gilt
 \[\frac{\varphi(I^g)}{\varphi(I^*)}=\frac{\gamma+1}{\gamma(m-1)}=\left(1+\frac1{\gamma}\right)\frac1{m-1}\in\left]\frac1{m-1},1\right]\]
-Beachte $r_i(U)=1$, $r_+(U)=m-1$, $U=(E,\mathcal I)$.
+Beachte $r_-(U)=1$, $r_+(U)=m-1$, $U=(E,\mathcal I)$.
 \subsubsection{Bezeichnung}\ssslbl
 $U=(E,\mathcal I)$ Unabhängigkeitssystem. Für $A\subset E$ setze
 \[\kappa(A)=\begin{cases}1&\text{falls }r_+(U_A)=0\\\frac{r_-(U_A)}{r_+(U_A)}&\text{sonst}\end{cases}\]
@@ -878,7 +984,7 @@ Es gilt
 Es folgt
 \[\sum_{e\in I}\Phi(e)=\sum_{j=1}^m\Phi(e_j)(\vert I_j\vert-\vert I_{j-1}\vert)=\sum_{j=1}^m(\Phi(e_j)-\Phi(e_{j+1}))\vert I_j\vert\]
 \subsubsection{Satz}\ssslbl
-$(E,\mathcal I,\Phi)$ spezifiziert Maximalitätsaufgabe über Anabhängigkeitssystem $U=(E,\mathcal I)$, $\varphi$ zugehörige Zielfunktion, $I^*$ optimale Lösung, $I^g$ Greedy-Lösung. Dann $\varphi(I^g)\geq\rho(U)\varphi(I^*)$. Es gibt $\Phi$ mit $=$.
+$(E,\mathcal I,\Phi)$ spezifiziert Maximalitätsaufgabe über Unabhängigkeitssystem $U=(E,\mathcal I)$, $\varphi$ zugehörige Zielfunktion, $I^*$ optimale Lösung, $I^g$ Greedy-Lösung. Dann $\varphi(I^g)\geq\rho(U)\varphi(I^*)$. Es gibt $\Phi$ mit $=$.
 \subsubsection*{Beweis}
 oBdA $E\neq\emptyset$. Sei $E=\{e_1,\dots,e_m\}$ miz $\Phi(e_1)\geq\dots\geq\Phi(e_m)$. $E_j=\{e_1,\dots,e_j\}$, $U_j=U_{E_j}$. Für $I\in\mathcal I$: $I_j:=I\cap E_j$.\\[1ex]
 Nach Voraussetzung gilt für $j=1,\dots,m$ $r_-(U_j)\leq\vert I_j^g\vert$, $\vert I_j^*\vert\leq r_+(U_j)$.\\[1ex]
