--- a/skript.tex
+++ b/skript.tex
@@ -727,7 +727,7 @@ Was ist mit nicht-bipartiten Graphen? Problem: Fehlen von Lemma \textit{(\ref{5.
 ladida
 \subsection{Von Basen zu diskreten Strukturen: Matroide}\sslbl
 \subsubsection{Definition}\ssslbl
-$E$ endliche Menge, $\mathcal I$ nichtleere Teilmenge von $2^E$. Das Paar $(E,\mathcal I)$ heißt \textit{Unabhängigkeitssystem}\index{Unabhängigkeitssystem}, wenn $\mathcal I$ abgeschlossen unter Inklusion ist, dh. ($I\in\mathcal I\wedge J\subset I$ $\Rightarrow$ $J\in\mathcal I$). $E$ \textit{Grundmenge}\index{Grundmenge}, Elemente von $\mathcal I$ \textit{unabhängige Mengen}\index{Mengen!unabhängige}, Elemente von $2^E\setminus\mathcal I$ \textit{abhängig}\index{Mengen!abhängige}. Gilt ferner ($I,J\in\mathcal I\wedge\vert I\vert+1=\vert J\vert$ $\Rightarrow$ $\exists(e\in J\setminus I):I\cup\{e\}\in\mathcal I$), so heißt $(E,\mathcal I)$ \textit{Matroid}\index{Matroid}.
+$E$ endliche Menge, $\mathcal I$ nichtleere Teilmenge von $2^E$. Das Paar $(E,\mathcal I)$ heißt \textit{Unabhängigkeitssystem}\index{System!Unabhängigkeits-}, wenn $\mathcal I$ abgeschlossen unter Inklusion ist, dh. ($I\in\mathcal I\wedge J\subset I$ $\Rightarrow$ $J\in\mathcal I$). $E$ \textit{Grundmenge}\index{Grundmenge}, Elemente von $\mathcal I$ \textit{unabhängige Mengen}\index{Mengen!unabhängige}, Elemente von $2^E\setminus\mathcal I$ \textit{abhängig}\index{Mengen!abhängige}. Gilt ferner ($I,J\in\mathcal I\wedge\vert I\vert+1=\vert J\vert$ $\Rightarrow$ $\exists(e\in J\setminus I):I\cup\{e\}\in\mathcal I$), so heißt $(E,\mathcal I)$ \textit{Matroid}\index{Matroid}.
 \subsubsection{Bemerkung}\ssslbl
 $(E,\mathcal I)$ Unabhängigkeitssystem. Dann gilt\hfill\textbf{07.11.2008}
 \begin{enumerate}[(a)]
@@ -765,7 +765,7 @@ $(E,\mathcal I)$ Unabhängigkeitssystem, $A\subset E$, $\mathcal I_A:=\{I\in\math
 \subsubsection*{Beweis}
 $\surd$
 \subsubsection{Bezeichnung}\ssslbl
-$(A,\mathcal I_A)$ durch $A$ \textit{induziertes Unabhängigkeitssystem / Matroid}\index{Matroid!induziertes}\index{Unabhängigkeitssystem!induziertes}.
+$(A,\mathcal I_A)$ durch $A$ \textit{induziertes Unabhängigkeitssystem / Matroid}\index{Matroid!induziertes}\index{Ssystem!Unabhängigkeits-!induziertes}.
 \subsubsection{Bezeichnung}\ssslbl
 $X_1,X_2$ Mengen, $\theta:X_1\rightarrow X_2$. Dann $\Theta:2^{X_1}\rightarrow2^{X_2}$ definiert durch $\Theta(I):=\{\theta(x)\::\:x\in I\}$ \textit{natürliche Erweiterung}\index{Erweiterung!natürliche} von $\theta$.
 \subsubsection{Bemerkung}\ssslbl
@@ -1075,6 +1075,84 @@ Hier gilt: $\alpha+2=\varphi(I^g)\geq\frac12\varphi(I^*)=\alpha$\begin{center}
 \subsubsection{Lemma}\ssslbl
 $G=(V,E,\Phi)$ gewichteter Graph mit $\Phi\geq0$, $\mathcal I$ Menge aller Matching von $G$, $\varphi(M)=\sum_{e\in M}\Phi(e)$ für $M\in\mathcal I$, $U=(E,\mathcal I)$. Ferner $I^*$ maximal (bez. $\varphi$), $I^g$ Greedy-Lösung. Dann gilt $2\varphi(I^g)\geq\varphi(I^*)$
 \subsubsection*{Beweis}
-Berechne Rangquotient
+Zeige $r_+(U_A)\leq2r_-(U_A)$ für $\emptyset\neq A\subset E$.\\[1ex]
+Annahme: Sei $A\subset E$, $I_1$, $I_2$ maximal unabhängig in $U_A$ mit $\vert I_1\vert=r_-(U_A)$, $\vert I_2\vert=r_+(U_A)$ und $r_+(U_A)\geq2r_-(U_A)+1$. Sei $V_k:=\bigcup_{e\in I_k}e$ ($k=1,2$). Es gilt
+\[\vert V_2\vert=2\vert I_2\vert=2r_+(U_A)\geq2\bigl(2r_-(U_A)+1\bigr)=4\vert I_1\vert+2=2\vert V_1\vert+2\]
+Also: Es gibt $e\in I_2$, die 2 Knoten aus $V_2\setminus V_1$ verbindet. Es folgt $I_1\cup\{e\}\in\mathcal I$.\\[1ex]
+Widerspruch: Also $\rho(U)\geq\frac12$. Behauptung folgt aus \textit{(\ref{5.2.23})}.
+\subsubsection{Bemerkung}\ssslbl
+$G=(V,E)$ Graph, $\mathcal I$ Menge aller $I\subset V$, so dass Matching existiert, das $I$ überdeckt. Dann ist $(V,\mathcal I)$ Matroid.
+\subsubsection*{Beweis}
+Übung
+\subsubsection{Definition}\ssslbl
+$(E,\mathcal I)$ Unabhängikeitssystem. $\mathcal B=\bigl\{I\in\mathcal I\::\:I\text{ Basis}\bigr\}$ $(E,\mathcal B)$ (zugehöriges) \textit{Basissystem}\index{System!Basis-}. \textit{Minimierungsaufgabe}\index{Minimierungsaufgabe} über Basissystem.\\[1ex]
+Gegeben: $(E,\mathcal I)$ Unabhängigkeitssystem, $\Phi:E\rightarrow\mathbb R$, zugehörige Zielfunktion $\varphi$.\\[1ex]
+Gesucht: $B^*\in argmin_{B\in\mathcal B}\varphi(B)$
+\subsubsection{Bemerkung}\ssslbl
+$U=(E,\mathcal I)$ Unabhängigkeitssystem, $(E,\mathcal B)$ zugehöriges Basissystem, $\Phi:E\rightarrow[0,\infty[$, $\varphi$ zugehörige Zielfunktion, $\beta:=\max\bigl\{0,\max_{e\in E}\Phi(e)\bigr\}$. Ferner $\psi:E\rightarrow[0,\infty[$ definiert durch $\psi(e):=\beta-\Phi(e)$ und $\Phi(I)=\sum_{e\in I}\psi(e)$ ($I\in\mathcal I$). Dann gilt
+\[\beta r_-(U)=\max_{I\in\mathcal I}\Psi(I)\leq\min_{B\in\mathcal B}\varphi(B)\leq\beta r_+(U)-\max_{I\in\mathcal I}\Psi(I)\]
+\subsubsection*{Beweis}
+Für $I\in\mathcal I$ gilt $\varphi(I)=\beta\vert I\vert-\Psi(I)$. Wegen $\beta\geq0$ folgt
+\[\min_{B\in\mathcal B}\varphi(B)=\min_{B\in\mathcal B}\bigl\{\beta\vert B\vert-\Psi(B)\bigr\}\leq\beta r_+(U)-\max_{B\in\mathcal B}\Psi(B)\]
+\subsubsection{Prozedur: Algorithmus von Kruskal\index{Algorithmus!Kruskal-}}\ssslbl
+\begin{lstlisting}
+INPUT Zusammenhängender gewichteter Graph $G=(V,E,\Phi)$ mit $\vert E\vert=m$
+OUTPUT Spannbaum minimalen Gewichts
+BEGIN Sortiere die Kanten nach aufsteigendem Gewicht, dh. $E=\{e_1,\dots,e_m\}$, $\Phi(e_1)\leq\dots\leq\Phi(e_m)$
+  $T\leftarrow\emptyset$
+  FOR $i=1,\dots,m$ DO
+  BEGIN
+    IF $T\cup\{e_1\}$ ist kreisfrei THEN
+      $T\leftarrow T\cup\{e_i\}$
+  END
+END
+\end{lstlisting}
+Variante: Bäume wachsen
+\subsubsection{Prozedur: Algorithmus von Prim\index{Algorithmus!Prim-}}
+\begin{lstlisting}
+INPUT/OUTPUT wie $\text{(\ref{5.2.31})}$
+BEGIN Sei $w\in V$, $W\leftarrow\{w\}$, $T\leftarrow\emptyset$
+  FOR ALL $v\in N(G,w)$ DO $\mu(v)\leftarrow w$
+  WHILE $N(G,W)\neq\emptyset$ DO
+    BEGIN Sei $z\in N(G,W)$ mit $\Phi\bigl(\{z,\mu(z)\}\bigr)=\min_{v\in N(G,W)}\Phi\bigl(\{v,\mu(v)\}\bigr)$
+      FOR ALL $v\in V\setminus W$ DO
+        BEGIN
+          IF $v\in N(G,z)\setminus N(G,W)$ THEN
+            $\mu(v)\leftarrow z$
+          IF $v\in N(G,z)\setminus N(G,W)$ UND $\Phi\bigl(\{v,\mu(v)\}\bigr)>\Phi\bigl(\{v,z\}\bigr\}$ THEN
+            $\mu(v)\leftarrow z$
+        $W\leftarrow W\cup\{z\}$, $T\leftarrow T\cup\bigl\{\{z,\mu(z)\}\bigr\}$
+        END
+    END
+END
+\end{lstlisting}
+\subsubsection{Beispiel}\ssslbl
+ladida
+\subsubsection{Satz}\ssslbl
+Algorithmus von Prim ist korrekt.
+\subsubsection*{Beweis}
+$G=(V,E,\Phi)$ zusammenhängend. Offenbar erzeugt Algorithmus Spannbaum. Induktion nach $\vert W\vert$, um zu zeigen, dass stets erzeugter aktueller Baum $B=(W,T)$ zu minimalen Spannbaum ergänzt wreden kann. Trivial für $W_1=\{v_1\}$. Behauptung gelte für $W_k=\{v_1,\dots,v_k\}$. Seien $T_k=\{e_1,\dots,e_{k-1}\}$, $B_k=(W_k,T_k)$. Algorithmus wählt kürzeste Kante mit genau einem Endpunkt in $W_k$, etwa $e_k=\{v_{i_0},v_{k+1}\}$.\\[1ex]
+Seien $W_{k+1}=W_k\cup\{v_{k+1}\}$, $T_{k+1}=T_k\cup\{e_k\}$, $B_{k+1}=(W_{k+1},T_{k+1})$.\\[1ex]
+Annahme: Es gibt Spannbaum $S=(V,F)$ mit $B_k\subset B$ und $e_k\not\in F$, der kürzer ist, als alle Spannbäume, die $B_{k+1}$ enthalten. $(V,F\cup\{e_k\})$ besitzt nach \textit{(\ref{5.2.15})} genau einen Kreis $K$. $K$ enthält eine von $e_k$ verschiedene Kante $e\in\delta(G,W_k)$. Nach Konstruktion gilt $\Phi(e)\geq\Phi(e_k)$ (sonst hätte Algorithmus nicht $e_k$ gewählt).\\[1ex]
+Mit $F'=\bigl(F\cup\{e_k\}\bigr)\setminus\{e\}$ folgt, dass $S'=(V,F')$ Spannbaum ist mit $\varphi(S')\leq\varphi(S)$ und $B_{k+1}\subset S'$. Widerspruch, es folgt Behaupung.
+\subsubsection{Beispiel}\ssslbl
+ladida\\[1ex]
+$\alpha\in N$, $\alpha\geq4$. Gesucht minimales (bez. $\Phi$), maximales (bez. Kantenzahl) Mathcing in $G$.\\[1ex]
+Hier: minimales perfektes Matching\\[1ex]
+Greedy: ladida\\[1ex]
+Optimal: ladida\\[1ex]
+Fehler hängt von $\alpha$ ab: $\frac{\alpha+1}4\rightarrow\infty$ ($\alpha\rightarrow\infty$)
+\subsubsection{Bezeichnung}\ssslbl
+Für $j=1,\dots,k$ seien $U_j=(E,\mathcal I_j)$ Unabhängkeitssysteme auf derselben Grundmenge $E$. Ferner
+\[\mathcal I:=\bigcap_{j=1}^k\mathcal I_j\:,\qquad U:=(E,\mathcal I)\]
+Dann heißt $U$ \textit{Durchschnitt}\index{Durchschnitt} von $U_1,\dots,U_k$
+\subsubsection{Bemerkung}\ssslbl
+Durchschnitt von Unabhängigkeitssystemen ist Unabhängigkeitssystem.
+\subsubsection{Lemma}\ssslbl
+Sei $U=(E,\mathcal I)$ Unabhängigkeitssystem. Dann gibt es $k\in\mathbb N$ und Matroide $M_1,\dots,M-k$ mit
+\[U=\bigcap_{j=1}kM_j\]
+\subsubsection*{Beiweis}
+Sei $\mathcal K$ Menge der Kreise in $U$, $K\in\mathcal K$, $\mathcal I(K)=\{I\subset E\::\:K\not\subset I\}$. es gilt $\mathcal I\subste\mathcal I(K)$.\\[1ex]
+Ferner $\bigl(E,\mathcal I(K)\bigr)$ Unabhängigkeitssystem, sogar Matroid.
 \printindex
 \end{document}
