--- a/skript.tex
+++ b/skript.tex
@@ -1152,7 +1152,7 @@ Durchschnitt von Unabhängigkeitssystemen ist Unabhängigkeitssystem.
 Sei $U=(E,\mathcal I)$ Unabhängigkeitssystem. Dann gibt es $k\in\mathbb N$ und Matroide $M_1,\dots,M-k$ mit
 \[U=\bigcap_{j=1}kM_j\]
 \subsubsection*{Beiweis}
-Sei $\mathcal K$ Menge der Kreise in $U$, $K\in\mathcal K$, $\mathcal I(K)=\{I\subset E\::\:K\not\subset I\}$. es gilt $\mathcal I\subste\mathcal I(K)$.\\[1ex]
+Sei $\mathcal K$ Menge der Kreise in $U$, $K\in\mathcal K$, $\mathcal I(K)=\{I\subset E\::\:K\not\subset I\}$. es gilt $\mathcal I\subset\mathcal I(K)$.\\[1ex]
 Ferner $\bigl(E,\mathcal I(K)\bigr)$ Unabhängigkeitssystem, sogar Matroid.
 \printindex
 \end{document}
